MMCPA-0: Fixing owldots spacing on mobile.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/promo-blocks/_promo-block-front.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/promo-blocks/_promo-block-front.scss
@@ -20,11 +20,13 @@
     height: auto;
   }
 
-  .field--name-field-banner img {
-    max-height: 476px;
-  }
-
   .c-content__banner {
     margin-bottom: 1.5rem;
+  }
+}
+
+.c-content__slider {
+  .field--name-field-banner img {
+    max-height: 476px;
   }
 }
